# zoom-python-webhook

./: .dockerignore  .env.sample  .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.github.yml  docker-compose.harbor.yml  docker-compose.yml  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: build.yml  dependabot-auto-merge.yml  pull-request-labels.yaml  python-tests.yml  release-on-push.yml
docs/: architecture.md
src/app/: main.py
src/app/api/v1/: api.py
src/app/api/v1/endpoints/: webhook.py
src/app/components/endpoint_url_validation/: __init__.py  handler.py  schema.py
src/app/components/zoom_room_checked_in/: __init__.py  handler.py  schema.py
src/app/components/zoom_room_checked_out/: __init__.py  handler.py  schema.py
src/app/components/zoom_room_sensor_data/: __init__.py  handler.py  schema.py
src/app/core/: base_webhook_event_schema.py  config.py  decorators.py  dependencies.py
src/app/utils/: logger.py
tests/: conftest.py
tests/app/api/v1/: test_api.py
tests/app/api/v1/endpoints/: test_webhook.py
tests/app/components/endpoint_url_validation/: test_url_validation_handler.py
tests/app/components/zoom_room_checked_in/: test_checked_in_handler.py
tests/app/components/zoom_room_checked_out/: test_checked_out_handler.py
tests/app/components/zoom_room_sensor_data/: test_sensor_data_handler.py
tests/app/core/: test_config.py  test_decorators.py  test_dependencies.py
