[tool.poetry]
name = "zoom-python-webhook"
version = "0.2.1"
description = "Fast API app for Zoom Webhook"
authors = ["Samuel Guillemet <samuel.guillemet@telecom-sudparis.eu>"]
readme = "README.md"
packages = [{ include = "app", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = { extras = ["all"], version = "^0.109.2" }
pydantic-settings = "^2.2.0"
pytz = "^2023.3"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
flake8 = "^6.0.0"
isort = "^5.13.2"
pre-commit = "^3.6.0"
mypy = "^1.8.0"
mypy-extensions = "^1.0.0"
pylint = "^3.2.2"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pylint-pydantic = "^0.3.2"
pytest-env = "^1.1.3"
pytest-asyncio = "^0.23.5"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/SamuelGuillemet/zoom-python-webhook/issues"

[tool.isort]
profile = "black"

[tool.mypy]
no_strict_optional = true
ignore_missing_imports = true
